[workspace]
members = ["crates/valkey-core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/paiml/valkey-from-zero"
homepage = "https://github.com/paiml/valkey-from-zero"
authors = ["Noah Gift <noah@paiml.com>"]
rust-version = "1.95"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
